// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DrillPage /> renders correctly 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <RNCSafeAreaProvider
    onInsetsChange={[Function]}
    style={
      [
        {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        [
          {
            "backgroundColor": "rgb(242, 242, 242)",
            "flex": 1,
          },
          undefined,
        ]
      }
    >
      <View
        collapsable={false}
        pointerEvents="box-none"
        style={
          {
            "zIndex": 1,
          }
        }
      >
        <View
          accessibilityElementsHidden={false}
          importantForAccessibility="auto"
          onLayout={[Function]}
          pointerEvents="box-none"
          style={null}
        >
          <View
            collapsable={false}
            pointerEvents="box-none"
            style={
              {
                "bottom": 0,
                "left": 0,
                "opacity": 1,
                "position": "absolute",
                "right": 0,
                "top": 0,
                "zIndex": 0,
              }
            }
          >
            <View
              collapsable={false}
              style={
                {
                  "backgroundColor": "rgb(255, 255, 255)",
                  "borderBottomColor": "rgb(216, 216, 216)",
                  "flex": 1,
                  "shadowColor": "rgb(216, 216, 216)",
                  "shadowOffset": {
                    "height": 0.5,
                    "width": 0,
                  },
                  "shadowOpacity": 0.85,
                  "shadowRadius": 0,
                }
              }
            />
          </View>
          <View
            collapsable={false}
            pointerEvents="box-none"
            style={
              {
                "height": 44,
                "maxHeight": undefined,
                "minHeight": undefined,
                "opacity": undefined,
                "transform": undefined,
              }
            }
          >
            <View
              pointerEvents="none"
              style={
                {
                  "height": 0,
                }
              }
            />
            <View
              pointerEvents="box-none"
              style={
                {
                  "alignItems": "stretch",
                  "flex": 1,
                  "flexDirection": "row",
                }
              }
            >
              <View
                collapsable={false}
                pointerEvents="box-none"
                style={
                  {
                    "alignItems": "flex-start",
                    "flexBasis": 0,
                    "flexGrow": 1,
                    "justifyContent": "center",
                    "marginStart": 0,
                    "opacity": 1,
                  }
                }
              />
              <View
                collapsable={false}
                pointerEvents="box-none"
                style={
                  {
                    "justifyContent": "center",
                    "marginHorizontal": 16,
                    "marginRight": 50,
                    "maxWidth": 718,
                    "opacity": 1,
                  }
                }
              >
                <Text
                  accessibilityRole="header"
                  aria-level="1"
                  collapsable={false}
                  numberOfLines={1}
                  onLayout={[Function]}
                  style={
                    {
                      "color": "rgb(28, 28, 30)",
                      "fontSize": 17,
                      "fontWeight": "600",
                    }
                  }
                >
                  Fitness Drill Title
                </Text>
              </View>
              <View
                collapsable={false}
                pointerEvents="box-none"
                style={
                  {
                    "alignItems": "flex-end",
                    "flexBasis": 0,
                    "flexGrow": 1,
                    "justifyContent": "center",
                    "marginEnd": 0,
                    "opacity": 1,
                  }
                }
              />
            </View>
          </View>
        </View>
      </View>
      <RNSScreenContainer
        onLayout={[Function]}
        style={
          {
            "flex": 1,
          }
        }
      >
        <RNSScreen
          activityState={2}
          collapsable={false}
          gestureResponseDistance={
            {
              "bottom": -1,
              "end": -1,
              "start": -1,
              "top": -1,
            }
          }
          pointerEvents="box-none"
          sheetAllowedDetents="large"
          sheetCornerRadius={-1}
          sheetExpandsWhenScrolledToEdge={true}
          sheetGrabberVisible={false}
          sheetLargestUndimmedDetent="all"
          style={
            {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <View
            collapsable={false}
            style={
              {
                "opacity": 1,
              }
            }
          />
          <View
            accessibilityElementsHidden={false}
            closing={false}
            gestureVelocityImpact={0.3}
            importantForAccessibility="auto"
            onClose={[Function]}
            onGestureBegin={[Function]}
            onGestureCanceled={[Function]}
            onGestureEnd={[Function]}
            onOpen={[Function]}
            onTransition={[Function]}
            pointerEvents="box-none"
            style={
              [
                {
                  "display": "flex",
                  "overflow": undefined,
                },
                {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
              ]
            }
            transitionSpec={
              {
                "close": {
                  "animation": "spring",
                  "config": {
                    "damping": 500,
                    "mass": 3,
                    "overshootClamping": true,
                    "restDisplacementThreshold": 10,
                    "restSpeedThreshold": 10,
                    "stiffness": 1000,
                  },
                },
                "open": {
                  "animation": "spring",
                  "config": {
                    "damping": 500,
                    "mass": 3,
                    "overshootClamping": true,
                    "restDisplacementThreshold": 10,
                    "restSpeedThreshold": 10,
                    "stiffness": 1000,
                  },
                },
              }
            }
          >
            <View
              collapsable={false}
              pointerEvents="box-none"
              style={
                {
                  "flex": 1,
                }
              }
            >
              <View
                collapsable={false}
                handlerTag={1}
                handlerType="PanGestureHandler"
                needsOffscreenAlphaCompositing={false}
                onGestureHandlerEvent={[Function]}
                onGestureHandlerStateChange={[Function]}
                style={
                  {
                    "flex": 1,
                    "transform": [
                      {
                        "translateX": 0,
                      },
                      {
                        "translateX": 0,
                      },
                    ],
                  }
                }
              >
                <View
                  pointerEvents="box-none"
                  style={
                    [
                      {
                        "flex": 1,
                        "overflow": "hidden",
                      },
                      [
                        {
                          "backgroundColor": "rgb(242, 242, 242)",
                        },
                        undefined,
                      ],
                    ]
                  }
                >
                  <View
                    style={
                      {
                        "flex": 1,
                        "flexDirection": "column-reverse",
                      }
                    }
                  >
                    <View
                      style={
                        {
                          "flex": 1,
                        }
                      }
                    >
                      <RCTScrollView
                        style={
                          {
                            "backgroundColor": "#fff",
                          }
                        }
                      >
                        <View>
                          <View
                            accessibilityIgnoresInvertColors={true}
                            style={
                              {
                                "alignItems": "center",
                                "backgroundColor": "rgb(0,0,0)",
                                "height": 1290,
                                "padding": 20,
                              }
                            }
                          >
                            <Image
                              source={
                                {
                                  "uri": "https://www.dialysistech.org/wp-content/uploads/2019/06/fitness.jpg",
                                }
                              }
                              style={
                                [
                                  {
                                    "bottom": 0,
                                    "left": 0,
                                    "position": "absolute",
                                    "right": 0,
                                    "top": 0,
                                  },
                                  {
                                    "height": 1290,
                                    "width": undefined,
                                  },
                                  {
                                    "opacity": 0.5,
                                  },
                                ]
                              }
                            />
                            <View
                              style={
                                {
                                  "alignItems": "center",
                                  "flex": 1,
                                  "height": 533.6,
                                  "justifyContent": "center",
                                }
                              }
                            >
                              <Text
                                style={
                                  {
                                    "color": "#fff",
                                    "fontSize": 35,
                                    "textAlign": "center",
                                  }
                                }
                              >
                                Fitness Drill Title
                              </Text>
                              <Text
                                style={
                                  {
                                    "color": "#fff",
                                    "fontSize": 14,
                                    "paddingHorizontal": 30,
                                  }
                                }
                              >
                                Author
                              </Text>
                            </View>
                            <View
                              style={
                                {
                                  "alignItems": "center",
                                  "flexDirection": "row",
                                  "height": 266.8,
                                  "justifyContent": "space-evenly",
                                }
                              }
                            >
                              <View
                                style={
                                  {
                                    "alignItems": "center",
                                    "flexBasis": "33%",
                                    "justifyContent": "center",
                                    "paddingHorizontal": 5,
                                  }
                                }
                              >
                                <Text
                                  style={
                                    {
                                      "color": "#fff",
                                      "fontSize": 14,
                                    }
                                  }
                                >
                                  10
                                </Text>
                                <Text
                                  style={
                                    {
                                      "color": "#fff",
                                      "fontSize": 14,
                                    }
                                  }
                                >
                                  minutes
                                </Text>
                              </View>
                              <View
                                style={
                                  {
                                    "borderRightColor": "#fff",
                                    "borderRightWidth": 0.5,
                                    "height": 15,
                                  }
                                }
                              />
                              <View
                                style={
                                  {
                                    "alignItems": "center",
                                    "flexBasis": "33%",
                                    "justifyContent": "center",
                                    "paddingHorizontal": 5,
                                  }
                                }
                              >
                                <Text
                                  style={
                                    {
                                      "color": "#fff",
                                      "fontSize": 14,
                                    }
                                  }
                                >
                                  1
                                  +
                                </Text>
                                <Text
                                  style={
                                    {
                                      "color": "#fff",
                                      "fontSize": 14,
                                    }
                                  }
                                >
                                  players
                                </Text>
                              </View>
                              <View
                                style={
                                  {
                                    "borderRightColor": "#fff",
                                    "borderRightWidth": 0.5,
                                    "height": 15,
                                  }
                                }
                              />
                              <View
                                style={
                                  {
                                    "alignItems": "center",
                                    "flexBasis": "33%",
                                    "justifyContent": "center",
                                    "paddingHorizontal": 5,
                                  }
                                }
                              >
                                <Text
                                  style={
                                    {
                                      "color": "#fff",
                                      "fontSize": 14,
                                    }
                                  }
                                >
                                  Beginner
                                </Text>
                                <Text
                                  style={
                                    {
                                      "color": "#fff",
                                      "fontSize": 14,
                                    }
                                  }
                                >
                                  level
                                </Text>
                              </View>
                            </View>
                            <View
                              style={
                                {
                                  "alignItems": "center",
                                  "width": "100%",
                                }
                              }
                            >
                              <View
                                accessibilityState={
                                  {
                                    "busy": undefined,
                                    "checked": undefined,
                                    "disabled": undefined,
                                    "expanded": undefined,
                                    "selected": undefined,
                                  }
                                }
                                accessibilityValue={
                                  {
                                    "max": undefined,
                                    "min": undefined,
                                    "now": undefined,
                                    "text": undefined,
                                  }
                                }
                                accessible={true}
                                collapsable={false}
                                focusable={true}
                                onClick={[Function]}
                                onResponderGrant={[Function]}
                                onResponderMove={[Function]}
                                onResponderRelease={[Function]}
                                onResponderTerminate={[Function]}
                                onResponderTerminationRequest={[Function]}
                                onStartShouldSetResponder={[Function]}
                                style={
                                  {
                                    "alignItems": "center",
                                    "backgroundColor": "#2a9e91",
                                    "borderRadius": 50,
                                    "height": 100,
                                    "justifyContent": "center",
                                    "margin": 20,
                                    "opacity": 1,
                                    "width": 100,
                                  }
                                }
                                testID="startButton"
                              >
                                <Text
                                  style={
                                    {
                                      "color": "#fff",
                                      "fontSize": 16,
                                      "fontWeight": "bold",
                                    }
                                  }
                                >
                                  Start
                                </Text>
                              </View>
                              <View
                                style={
                                  {
                                    "bottom": 0,
                                    "justifyContent": "center",
                                    "position": "absolute",
                                    "right": "15%",
                                    "top": 0,
                                  }
                                }
                              >
                                <View
                                  accessibilityState={
                                    {
                                      "busy": undefined,
                                      "checked": undefined,
                                      "disabled": undefined,
                                      "expanded": undefined,
                                      "selected": undefined,
                                    }
                                  }
                                  accessibilityValue={
                                    {
                                      "max": undefined,
                                      "min": undefined,
                                      "now": undefined,
                                      "text": undefined,
                                    }
                                  }
                                  accessible={true}
                                  collapsable={false}
                                  focusable={true}
                                  onClick={[Function]}
                                  onResponderGrant={[Function]}
                                  onResponderMove={[Function]}
                                  onResponderRelease={[Function]}
                                  onResponderTerminate={[Function]}
                                  onResponderTerminationRequest={[Function]}
                                  onStartShouldSetResponder={[Function]}
                                  style={
                                    {
                                      "opacity": 1,
                                    }
                                  }
                                  testID="favoriteButton"
                                >
                                  <Text />
                                </View>
                              </View>
                            </View>
                          </View>
                          <View>
                            <View
                              style={
                                {
                                  "paddingBottom": 10,
                                }
                              }
                            >
                              <View
                                style={
                                  {
                                    "borderBottomColor": "#e5e5e5",
                                    "borderBottomWidth": 1,
                                  }
                                }
                              />
                              <View
                                style={
                                  {
                                    "padding": 20,
                                  }
                                }
                              >
                                <Text
                                  style={
                                    [
                                      {
                                        "color": "#232b2b",
                                        "fontSize": 20,
                                        "fontWeight": "bold",
                                        "marginBottom": 5,
                                        "textAlign": "center",
                                      },
                                      undefined,
                                    ]
                                  }
                                >
                                  Good for
                                </Text>
                                <Text
                                  style={
                                    [
                                      {
                                        "color": "#A6A6A6",
                                        "fontSize": 16,
                                        "textAlign": "center",
                                      },
                                      undefined,
                                    ]
                                  }
                                >
                                  Full body
                                </Text>
                              </View>
                              <View
                                style={
                                  {
                                    "borderBottomColor": "#e5e5e5",
                                    "borderBottomWidth": 1,
                                  }
                                }
                              />
                              <View
                                style={
                                  {
                                    "padding": 20,
                                  }
                                }
                              >
                                <Text
                                  style={
                                    [
                                      {
                                        "color": "#232b2b",
                                        "fontSize": 20,
                                        "fontWeight": "bold",
                                        "marginBottom": 5,
                                        "textAlign": "center",
                                      },
                                      undefined,
                                    ]
                                  }
                                >
                                  Equipment
                                </Text>
                                <Text
                                  style={
                                    [
                                      {
                                        "color": "#A6A6A6",
                                        "fontSize": 16,
                                        "textAlign": "center",
                                      },
                                      undefined,
                                    ]
                                  }
                                >
                                  Equipment needs for the drill
                                </Text>
                              </View>
                              <View
                                style={
                                  {
                                    "borderBottomColor": "#e5e5e5",
                                    "borderBottomWidth": 1,
                                  }
                                }
                              />
                              <View
                                style={
                                  {
                                    "padding": 20,
                                  }
                                }
                              >
                                <Text
                                  style={
                                    [
                                      {
                                        "color": "#232b2b",
                                        "fontSize": 20,
                                        "fontWeight": "bold",
                                        "marginBottom": 5,
                                        "textAlign": "center",
                                      },
                                      undefined,
                                    ]
                                  }
                                >
                                  Description
                                </Text>
                                <Text
                                  style={
                                    [
                                      {
                                        "color": "#A6A6A6",
                                        "fontSize": 16,
                                        "textAlign": "center",
                                      },
                                      undefined,
                                    ]
                                  }
                                >
                                  Description of the drill
                                </Text>
                              </View>
                              <View
                                style={
                                  {
                                    "borderBottomColor": "#e5e5e5",
                                    "borderBottomWidth": 1,
                                  }
                                }
                              />
                            </View>
                          </View>
                          <View
                            style={
                              {
                                "flex": 1,
                              }
                            }
                          >
                            <View
                              style={
                                {
                                  "flex": 1,
                                  "paddingLeft": 10,
                                }
                              }
                            >
                              <View
                                style={
                                  {
                                    "flex": 1,
                                    "flexDirection": "row",
                                    "padding": 10,
                                  }
                                }
                              >
                                <Text
                                  style={
                                    {
                                      "color": "#232b2b",
                                      "fontSize": 16,
                                    }
                                  }
                                >
                                  • 
                                   
                                  Warmup
                                </Text>
                              </View>
                              <View
                                style={
                                  {
                                    "flex": 1,
                                    "flexDirection": "row",
                                    "padding": 10,
                                  }
                                }
                              >
                                <Text
                                  style={
                                    {
                                      "color": "#232b2b",
                                      "fontSize": 16,
                                    }
                                  }
                                >
                                  • 
                                   
                                  Do the drill
                                </Text>
                              </View>
                              <View
                                style={
                                  {
                                    "flex": 1,
                                    "flexDirection": "row",
                                    "padding": 10,
                                  }
                                }
                              >
                                <Text
                                  style={
                                    {
                                      "color": "#232b2b",
                                      "fontSize": 16,
                                    }
                                  }
                                >
                                  • 
                                   
                                  Last step
                                </Text>
                              </View>
                              <View
                                style={
                                  {
                                    "alignItems": "center",
                                    "marginVertical": 10,
                                  }
                                }
                              >
                                <View
                                  accessibilityState={
                                    {
                                      "busy": undefined,
                                      "checked": undefined,
                                      "disabled": undefined,
                                      "expanded": undefined,
                                      "selected": undefined,
                                    }
                                  }
                                  accessibilityValue={
                                    {
                                      "max": undefined,
                                      "min": undefined,
                                      "now": undefined,
                                      "text": undefined,
                                    }
                                  }
                                  accessible={true}
                                  collapsable={false}
                                  focusable={true}
                                  onClick={[Function]}
                                  onResponderGrant={[Function]}
                                  onResponderMove={[Function]}
                                  onResponderRelease={[Function]}
                                  onResponderTerminate={[Function]}
                                  onResponderTerminationRequest={[Function]}
                                  onStartShouldSetResponder={[Function]}
                                  style={
                                    {
                                      "alignItems": "center",
                                      "backgroundColor": "#2a9e91",
                                      "borderRadius": 5,
                                      "flexDirection": "row",
                                      "height": 40,
                                      "justifyContent": "center",
                                      "opacity": 1,
                                      "paddingHorizontal": 20,
                                      "paddingVertical": 10,
                                      "width": "80%",
                                    }
                                  }
                                  testID="startFitness"
                                >
                                  <Text
                                    style={
                                      {
                                        "color": "#fff",
                                        "fontSize": 16,
                                        "textAlign": "center",
                                      }
                                    }
                                  >
                                    Start
                                  </Text>
                                </View>
                              </View>
                            </View>
                          </View>
                        </View>
                      </RCTScrollView>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </RNSScreen>
      </RNSScreenContainer>
    </View>
  </RNCSafeAreaProvider>
</View>
`;

exports[`<DrillPage /> renders correctly a favorite drill 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <RNCSafeAreaProvider
    onInsetsChange={[Function]}
    style={
      [
        {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        [
          {
            "backgroundColor": "rgb(242, 242, 242)",
            "flex": 1,
          },
          undefined,
        ]
      }
    >
      <View
        collapsable={false}
        pointerEvents="box-none"
        style={
          {
            "zIndex": 1,
          }
        }
      >
        <View
          accessibilityElementsHidden={false}
          importantForAccessibility="auto"
          onLayout={[Function]}
          pointerEvents="box-none"
          style={null}
        >
          <View
            collapsable={false}
            pointerEvents="box-none"
            style={
              {
                "bottom": 0,
                "left": 0,
                "opacity": 1,
                "position": "absolute",
                "right": 0,
                "top": 0,
                "zIndex": 0,
              }
            }
          >
            <View
              collapsable={false}
              style={
                {
                  "backgroundColor": "rgb(255, 255, 255)",
                  "borderBottomColor": "rgb(216, 216, 216)",
                  "flex": 1,
                  "shadowColor": "rgb(216, 216, 216)",
                  "shadowOffset": {
                    "height": 0.5,
                    "width": 0,
                  },
                  "shadowOpacity": 0.85,
                  "shadowRadius": 0,
                }
              }
            />
          </View>
          <View
            collapsable={false}
            pointerEvents="box-none"
            style={
              {
                "height": 44,
                "maxHeight": undefined,
                "minHeight": undefined,
                "opacity": undefined,
                "transform": undefined,
              }
            }
          >
            <View
              pointerEvents="none"
              style={
                {
                  "height": 0,
                }
              }
            />
            <View
              pointerEvents="box-none"
              style={
                {
                  "alignItems": "stretch",
                  "flex": 1,
                  "flexDirection": "row",
                }
              }
            >
              <View
                collapsable={false}
                pointerEvents="box-none"
                style={
                  {
                    "alignItems": "flex-start",
                    "flexBasis": 0,
                    "flexGrow": 1,
                    "justifyContent": "center",
                    "marginStart": 0,
                    "opacity": 1,
                  }
                }
              />
              <View
                collapsable={false}
                pointerEvents="box-none"
                style={
                  {
                    "justifyContent": "center",
                    "marginHorizontal": 16,
                    "marginRight": 50,
                    "maxWidth": 718,
                    "opacity": 1,
                  }
                }
              >
                <Text
                  accessibilityRole="header"
                  aria-level="1"
                  collapsable={false}
                  numberOfLines={1}
                  onLayout={[Function]}
                  style={
                    {
                      "color": "rgb(28, 28, 30)",
                      "fontSize": 17,
                      "fontWeight": "600",
                    }
                  }
                >
                  Fitness Drill Title
                </Text>
              </View>
              <View
                collapsable={false}
                pointerEvents="box-none"
                style={
                  {
                    "alignItems": "flex-end",
                    "flexBasis": 0,
                    "flexGrow": 1,
                    "justifyContent": "center",
                    "marginEnd": 0,
                    "opacity": 1,
                  }
                }
              />
            </View>
          </View>
        </View>
      </View>
      <RNSScreenContainer
        onLayout={[Function]}
        style={
          {
            "flex": 1,
          }
        }
      >
        <RNSScreen
          activityState={2}
          collapsable={false}
          gestureResponseDistance={
            {
              "bottom": -1,
              "end": -1,
              "start": -1,
              "top": -1,
            }
          }
          pointerEvents="box-none"
          sheetAllowedDetents="large"
          sheetCornerRadius={-1}
          sheetExpandsWhenScrolledToEdge={true}
          sheetGrabberVisible={false}
          sheetLargestUndimmedDetent="all"
          style={
            {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <View
            collapsable={false}
            style={
              {
                "opacity": 1,
              }
            }
          />
          <View
            accessibilityElementsHidden={false}
            closing={false}
            gestureVelocityImpact={0.3}
            importantForAccessibility="auto"
            onClose={[Function]}
            onGestureBegin={[Function]}
            onGestureCanceled={[Function]}
            onGestureEnd={[Function]}
            onOpen={[Function]}
            onTransition={[Function]}
            pointerEvents="box-none"
            style={
              [
                {
                  "display": "flex",
                  "overflow": undefined,
                },
                {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
              ]
            }
            transitionSpec={
              {
                "close": {
                  "animation": "spring",
                  "config": {
                    "damping": 500,
                    "mass": 3,
                    "overshootClamping": true,
                    "restDisplacementThreshold": 10,
                    "restSpeedThreshold": 10,
                    "stiffness": 1000,
                  },
                },
                "open": {
                  "animation": "spring",
                  "config": {
                    "damping": 500,
                    "mass": 3,
                    "overshootClamping": true,
                    "restDisplacementThreshold": 10,
                    "restSpeedThreshold": 10,
                    "stiffness": 1000,
                  },
                },
              }
            }
          >
            <View
              collapsable={false}
              pointerEvents="box-none"
              style={
                {
                  "flex": 1,
                }
              }
            >
              <View
                collapsable={false}
                handlerTag={2}
                handlerType="PanGestureHandler"
                needsOffscreenAlphaCompositing={false}
                onGestureHandlerEvent={[Function]}
                onGestureHandlerStateChange={[Function]}
                style={
                  {
                    "flex": 1,
                    "transform": [
                      {
                        "translateX": 0,
                      },
                      {
                        "translateX": 0,
                      },
                    ],
                  }
                }
              >
                <View
                  pointerEvents="box-none"
                  style={
                    [
                      {
                        "flex": 1,
                        "overflow": "hidden",
                      },
                      [
                        {
                          "backgroundColor": "rgb(242, 242, 242)",
                        },
                        undefined,
                      ],
                    ]
                  }
                >
                  <View
                    style={
                      {
                        "flex": 1,
                        "flexDirection": "column-reverse",
                      }
                    }
                  >
                    <View
                      style={
                        {
                          "flex": 1,
                        }
                      }
                    >
                      <RCTScrollView
                        style={
                          {
                            "backgroundColor": "#fff",
                          }
                        }
                      >
                        <View>
                          <View
                            accessibilityIgnoresInvertColors={true}
                            style={
                              {
                                "alignItems": "center",
                                "backgroundColor": "rgb(0,0,0)",
                                "height": 1290,
                                "padding": 20,
                              }
                            }
                          >
                            <Image
                              source={
                                {
                                  "uri": "https://www.dialysistech.org/wp-content/uploads/2019/06/fitness.jpg",
                                }
                              }
                              style={
                                [
                                  {
                                    "bottom": 0,
                                    "left": 0,
                                    "position": "absolute",
                                    "right": 0,
                                    "top": 0,
                                  },
                                  {
                                    "height": 1290,
                                    "width": undefined,
                                  },
                                  {
                                    "opacity": 0.5,
                                  },
                                ]
                              }
                            />
                            <View
                              style={
                                {
                                  "alignItems": "center",
                                  "flex": 1,
                                  "height": 533.6,
                                  "justifyContent": "center",
                                }
                              }
                            >
                              <Text
                                style={
                                  {
                                    "color": "#fff",
                                    "fontSize": 35,
                                    "textAlign": "center",
                                  }
                                }
                              >
                                Fitness Drill Title
                              </Text>
                              <Text
                                style={
                                  {
                                    "color": "#fff",
                                    "fontSize": 14,
                                    "paddingHorizontal": 30,
                                  }
                                }
                              >
                                Author
                              </Text>
                            </View>
                            <View
                              style={
                                {
                                  "alignItems": "center",
                                  "flexDirection": "row",
                                  "height": 266.8,
                                  "justifyContent": "space-evenly",
                                }
                              }
                            >
                              <View
                                style={
                                  {
                                    "alignItems": "center",
                                    "flexBasis": "33%",
                                    "justifyContent": "center",
                                    "paddingHorizontal": 5,
                                  }
                                }
                              >
                                <Text
                                  style={
                                    {
                                      "color": "#fff",
                                      "fontSize": 14,
                                    }
                                  }
                                >
                                  10
                                </Text>
                                <Text
                                  style={
                                    {
                                      "color": "#fff",
                                      "fontSize": 14,
                                    }
                                  }
                                >
                                  minutes
                                </Text>
                              </View>
                              <View
                                style={
                                  {
                                    "borderRightColor": "#fff",
                                    "borderRightWidth": 0.5,
                                    "height": 15,
                                  }
                                }
                              />
                              <View
                                style={
                                  {
                                    "alignItems": "center",
                                    "flexBasis": "33%",
                                    "justifyContent": "center",
                                    "paddingHorizontal": 5,
                                  }
                                }
                              >
                                <Text
                                  style={
                                    {
                                      "color": "#fff",
                                      "fontSize": 14,
                                    }
                                  }
                                >
                                  1
                                  +
                                </Text>
                                <Text
                                  style={
                                    {
                                      "color": "#fff",
                                      "fontSize": 14,
                                    }
                                  }
                                >
                                  players
                                </Text>
                              </View>
                              <View
                                style={
                                  {
                                    "borderRightColor": "#fff",
                                    "borderRightWidth": 0.5,
                                    "height": 15,
                                  }
                                }
                              />
                              <View
                                style={
                                  {
                                    "alignItems": "center",
                                    "flexBasis": "33%",
                                    "justifyContent": "center",
                                    "paddingHorizontal": 5,
                                  }
                                }
                              >
                                <Text
                                  style={
                                    {
                                      "color": "#fff",
                                      "fontSize": 14,
                                    }
                                  }
                                >
                                  Beginner
                                </Text>
                                <Text
                                  style={
                                    {
                                      "color": "#fff",
                                      "fontSize": 14,
                                    }
                                  }
                                >
                                  level
                                </Text>
                              </View>
                            </View>
                            <View
                              style={
                                {
                                  "alignItems": "center",
                                  "width": "100%",
                                }
                              }
                            >
                              <View
                                accessibilityState={
                                  {
                                    "busy": undefined,
                                    "checked": undefined,
                                    "disabled": undefined,
                                    "expanded": undefined,
                                    "selected": undefined,
                                  }
                                }
                                accessibilityValue={
                                  {
                                    "max": undefined,
                                    "min": undefined,
                                    "now": undefined,
                                    "text": undefined,
                                  }
                                }
                                accessible={true}
                                collapsable={false}
                                focusable={true}
                                onClick={[Function]}
                                onResponderGrant={[Function]}
                                onResponderMove={[Function]}
                                onResponderRelease={[Function]}
                                onResponderTerminate={[Function]}
                                onResponderTerminationRequest={[Function]}
                                onStartShouldSetResponder={[Function]}
                                style={
                                  {
                                    "alignItems": "center",
                                    "backgroundColor": "#2a9e91",
                                    "borderRadius": 50,
                                    "height": 100,
                                    "justifyContent": "center",
                                    "margin": 20,
                                    "opacity": 1,
                                    "width": 100,
                                  }
                                }
                                testID="startButton"
                              >
                                <Text
                                  style={
                                    {
                                      "color": "#fff",
                                      "fontSize": 16,
                                      "fontWeight": "bold",
                                    }
                                  }
                                >
                                  Start
                                </Text>
                              </View>
                              <View
                                style={
                                  {
                                    "bottom": 0,
                                    "justifyContent": "center",
                                    "position": "absolute",
                                    "right": "15%",
                                    "top": 0,
                                  }
                                }
                              >
                                <View
                                  accessibilityState={
                                    {
                                      "busy": undefined,
                                      "checked": undefined,
                                      "disabled": undefined,
                                      "expanded": undefined,
                                      "selected": undefined,
                                    }
                                  }
                                  accessibilityValue={
                                    {
                                      "max": undefined,
                                      "min": undefined,
                                      "now": undefined,
                                      "text": undefined,
                                    }
                                  }
                                  accessible={true}
                                  collapsable={false}
                                  focusable={true}
                                  onClick={[Function]}
                                  onResponderGrant={[Function]}
                                  onResponderMove={[Function]}
                                  onResponderRelease={[Function]}
                                  onResponderTerminate={[Function]}
                                  onResponderTerminationRequest={[Function]}
                                  onStartShouldSetResponder={[Function]}
                                  style={
                                    {
                                      "opacity": 1,
                                    }
                                  }
                                  testID="favoriteButton"
                                >
                                  <Text />
                                </View>
                              </View>
                            </View>
                          </View>
                          <View>
                            <View
                              style={
                                {
                                  "paddingBottom": 10,
                                }
                              }
                            >
                              <View
                                style={
                                  {
                                    "borderBottomColor": "#e5e5e5",
                                    "borderBottomWidth": 1,
                                  }
                                }
                              />
                              <View
                                style={
                                  {
                                    "padding": 20,
                                  }
                                }
                              >
                                <Text
                                  style={
                                    [
                                      {
                                        "color": "#232b2b",
                                        "fontSize": 20,
                                        "fontWeight": "bold",
                                        "marginBottom": 5,
                                        "textAlign": "center",
                                      },
                                      undefined,
                                    ]
                                  }
                                >
                                  Good for
                                </Text>
                                <Text
                                  style={
                                    [
                                      {
                                        "color": "#A6A6A6",
                                        "fontSize": 16,
                                        "textAlign": "center",
                                      },
                                      undefined,
                                    ]
                                  }
                                >
                                  Full body
                                </Text>
                              </View>
                              <View
                                style={
                                  {
                                    "borderBottomColor": "#e5e5e5",
                                    "borderBottomWidth": 1,
                                  }
                                }
                              />
                              <View
                                style={
                                  {
                                    "padding": 20,
                                  }
                                }
                              >
                                <Text
                                  style={
                                    [
                                      {
                                        "color": "#232b2b",
                                        "fontSize": 20,
                                        "fontWeight": "bold",
                                        "marginBottom": 5,
                                        "textAlign": "center",
                                      },
                                      undefined,
                                    ]
                                  }
                                >
                                  Equipment
                                </Text>
                                <Text
                                  style={
                                    [
                                      {
                                        "color": "#A6A6A6",
                                        "fontSize": 16,
                                        "textAlign": "center",
                                      },
                                      undefined,
                                    ]
                                  }
                                >
                                  Equipment needs for the drill
                                </Text>
                              </View>
                              <View
                                style={
                                  {
                                    "borderBottomColor": "#e5e5e5",
                                    "borderBottomWidth": 1,
                                  }
                                }
                              />
                              <View
                                style={
                                  {
                                    "padding": 20,
                                  }
                                }
                              >
                                <Text
                                  style={
                                    [
                                      {
                                        "color": "#232b2b",
                                        "fontSize": 20,
                                        "fontWeight": "bold",
                                        "marginBottom": 5,
                                        "textAlign": "center",
                                      },
                                      undefined,
                                    ]
                                  }
                                >
                                  Description
                                </Text>
                                <Text
                                  style={
                                    [
                                      {
                                        "color": "#A6A6A6",
                                        "fontSize": 16,
                                        "textAlign": "center",
                                      },
                                      undefined,
                                    ]
                                  }
                                >
                                  Description of the drill
                                </Text>
                              </View>
                              <View
                                style={
                                  {
                                    "borderBottomColor": "#e5e5e5",
                                    "borderBottomWidth": 1,
                                  }
                                }
                              />
                            </View>
                          </View>
                          <View
                            style={
                              {
                                "flex": 1,
                              }
                            }
                          >
                            <View
                              style={
                                {
                                  "flex": 1,
                                  "paddingLeft": 10,
                                }
                              }
                            >
                              <View
                                style={
                                  {
                                    "flex": 1,
                                    "flexDirection": "row",
                                    "padding": 10,
                                  }
                                }
                              >
                                <Text
                                  style={
                                    {
                                      "color": "#232b2b",
                                      "fontSize": 16,
                                    }
                                  }
                                >
                                  • 
                                   
                                  Warmup
                                </Text>
                              </View>
                              <View
                                style={
                                  {
                                    "flex": 1,
                                    "flexDirection": "row",
                                    "padding": 10,
                                  }
                                }
                              >
                                <Text
                                  style={
                                    {
                                      "color": "#232b2b",
                                      "fontSize": 16,
                                    }
                                  }
                                >
                                  • 
                                   
                                  Do the drill
                                </Text>
                              </View>
                              <View
                                style={
                                  {
                                    "flex": 1,
                                    "flexDirection": "row",
                                    "padding": 10,
                                  }
                                }
                              >
                                <Text
                                  style={
                                    {
                                      "color": "#232b2b",
                                      "fontSize": 16,
                                    }
                                  }
                                >
                                  • 
                                   
                                  Last step
                                </Text>
                              </View>
                              <View
                                style={
                                  {
                                    "alignItems": "center",
                                    "marginVertical": 10,
                                  }
                                }
                              >
                                <View
                                  accessibilityState={
                                    {
                                      "busy": undefined,
                                      "checked": undefined,
                                      "disabled": undefined,
                                      "expanded": undefined,
                                      "selected": undefined,
                                    }
                                  }
                                  accessibilityValue={
                                    {
                                      "max": undefined,
                                      "min": undefined,
                                      "now": undefined,
                                      "text": undefined,
                                    }
                                  }
                                  accessible={true}
                                  collapsable={false}
                                  focusable={true}
                                  onClick={[Function]}
                                  onResponderGrant={[Function]}
                                  onResponderMove={[Function]}
                                  onResponderRelease={[Function]}
                                  onResponderTerminate={[Function]}
                                  onResponderTerminationRequest={[Function]}
                                  onStartShouldSetResponder={[Function]}
                                  style={
                                    {
                                      "alignItems": "center",
                                      "backgroundColor": "#2a9e91",
                                      "borderRadius": 5,
                                      "flexDirection": "row",
                                      "height": 40,
                                      "justifyContent": "center",
                                      "opacity": 1,
                                      "paddingHorizontal": 20,
                                      "paddingVertical": 10,
                                      "width": "80%",
                                    }
                                  }
                                  testID="startFitness"
                                >
                                  <Text
                                    style={
                                      {
                                        "color": "#fff",
                                        "fontSize": 16,
                                        "textAlign": "center",
                                      }
                                    }
                                  >
                                    Start
                                  </Text>
                                </View>
                              </View>
                            </View>
                          </View>
                        </View>
                      </RCTScrollView>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </RNSScreen>
      </RNSScreenContainer>
    </View>
  </RNCSafeAreaProvider>
</View>
`;
